--- a/daum-news-crawler/cronjob-daum-news-crawler.yaml
+++ b/daum-news-crawler/cronjob-daum-news-crawler.yaml
@@ -4,6 +4,7 @@ metadata:
   name: daum-news-crawler
 spec:
   schedule: "* */1 * * *"
+  concurrencyPolicy: Forbid
   jobTemplate:
     spec:
       template:
