--- a/jenkins/deployment-jenkins.yaml
+++ b/jenkins/deployment-jenkins.yaml
@@ -20,7 +20,12 @@ spec:
           volumeMounts:
             - name: jenkins-home
               mountPath: /var/jenkins_home
+            - name: docker-socket
+              mountPath: /var/run/docker.sock
       volumes:
         - name: jenkins-home
           persistentVolumeClaim:
             claimName: pvc-jenkins
+        - name: docker-socket
+          hostPath:
+            path: /var/run/docker.sock
